<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ScrbDex</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">ScrbDex</string>
    <string name="username_hint">Your first name</string>
    <string name="password_hint">The best number ever (x2)</string>
    <string name="login_button">Login</string>
    <string name="title_activity_hub">The Scrub Hub</string>
    <string name="default_list_text">Do Something</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_view">ViewActivity</string>

    <!-- For option "pref_is_scrub" -->
    <string name="pref_is_scrub_label">Are you a scrub?</string>
    <string name="pref_is_scrub_key">is_scrub</string>
    <string name="pref_is_scrub_no">No</string>
    
    <string name="title_activity_vote">VoteActivity</string>
    <string name="voting_button">Click to Vote!\n\n </string>
    <string name="default_count">0</string>
    <string name="title_activity_detail">DetailActivity</string>
    
    <!-- For details for scrubs -->
    <string name="scrub_name_hint">This scrub\'s name</string>
    <string name="scrub_email_hint">This scrub\'s email</string>
    <string name="save_detail_button">Save</string>


</resources>
