<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.scrubcity.app.scrbdex.DetailFragment" 
    android:gravity="top">

    <TextView
        android:id="@+id/scrub_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_world" />
    
    <EditText
        android:id="@+id/scrub_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/scrub_email_hint"
        android:inputType="textEmailAddress" />
    
    <Button
        android:id="@+id/save_detail_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="writeDetailsToFile"
        android:text="@string/save_detail_button" />
    
    

</RelativeLayout>
